scrollbar fixing

--- a/lps/src/app/shared/component/master.component.css
+++ b/lps/src/app/shared/component/master.component.css
@@ -311,3 +311,9 @@ color: #ef6f00;
   overflow-y: scroll;
 }
 
+.saveFilterIntendation{
+  max-height:465px;
+  margin-top:10px !important;
+  overflow-y:scroll;
+}
+
